# gfx-hal-demo

./: Cargo.toml  README.md
assets/: rect.vert
src/: main.rs  rect.rs
